add sum and substract in keyword

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,12 @@
 
 <div class="row">
  	<% if notice.present? %>
-		<aside class="alert alert-info">
+		<aside class="alert alert-primary">
 			<%= notice %>
 		</aside>
 		<% end %>
 		<% if alert.present? %>
-			<aside class="alert alert-danger">
+			<aside class="alert alert-warning">
 		<%= alert %>
 		</aside>
 	<% end %>
