--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 <div class="row">
  	<% if notice.present? %>
-		<aside class="alert alert-primary">
+		<aside class="alert alert-sucess">
 			<%= notice %>
 		</aside>
 		<% end %>
