--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page-header">
 	<%= link_to 'Cancel', products_path, class: "btn btn-danger pull-right"%>
-	<h1><%=@product.name%></h1>
+	<h1><%=Edit @product.name%></h1>
 
 </div>
 <%= render 'form' %>
