--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New User</h1>
-
+<div class="page-header">
+	<%= link_to 'Cancel', users_path, class: "btn btn-danger pull-right"%>
+	<h1>New User</h1>
+</div>
 <%= render 'form' %>
