add store and suppliers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html >
 <head>
-  <title>PointOfSales</title>
+  <title>RoRPos</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -13,7 +13,7 @@
 
 <div class="row">
  	<% if notice.present? %>
-		<aside class="alert alert-sucess">
+		<aside class="alert alert-warning">
 			<%= notice %>
 		</aside>
 		<% end %>
