--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
 </div>
 <div class="row">
   <% @products.each do |product| %>
-      <div class="col-xs-6 col-md-3">
+      <div class="col-md-3">
           <%= link_to edit_product_path(product), :class=>"thumbnail" do %>
                <%=image_tag product.photo.url :thumb, :size => '260x180' %>
             <%end%>
