--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -15,11 +15,39 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
       <% if user_signed_in? %>
-        <li><%= link_to "Home", root_path %></li>
-          <li><%= link_to "Products", products_path %></li>
-          <li><%= link_to "Ticket", new_ticket_path %></li>
+          <li>
+               <%= link_to root_path do%>
+                <span class= "glyphicon glyphicon-home">
+                </span>   
+                Home
+               <%end%>
+          </li>
+          <li>
+            <%= link_to new_ticket_path do %>
+             <span class="glyphicon glyphicon-list-alt">
+             </span>
+             Sale
+            <% end %>
+         <li class="dropdown ">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+              Store
+            <span class="caret "></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'Orders', orders_path%></li>
+              <li><%= link_to 'Suppliers', suppliers_path%></li>
+              <li><%= link_to 'Products',products_path %></li>
+            </ul>
+          </li>
+         </li>
         <% if current_user.has_role? :admin %>
-          <li><%= link_to "User", users_path %></li>
+          <li>
+            <%= link_to users_path  do%>
+            <span class="glyphicon glyphicon-user">
+             </span>
+             Users
+            <% end %>
+          </li>
         <% end %>
        <% end %>
       </ul>
