--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,7 +2,9 @@
 $icon-font-path: "bootstrap-sass-official/assets/fonts/bootstrap/";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap-sprockets";
 
-@import "bootswatch-scss/cosmo/variables";
+@import "bootswatch-scss/cerulean/variables";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 @import "bootstrap-sass-official/assets/stylesheets/bootstrap";
-@import "bootswatch-scss/cosmo/bootswatch";
+@import "bootswatch-scss/cerulean/bootswatch";
+@import "select2.css";
+@import "select2-bootstrap";
