--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,14 +13,19 @@
 
 <div class="row">
  	<% if notice.present? %>
-		<aside class="alert alert-warning">
+		
+		<aside class="alert alert-warning  data-dismiss="alert" aria-label="Close"">
 			<%= notice %>
+			<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <span aria-hidden="true">&times;</span>
+</button>
 		</aside>
-		<% end %>
-		<% if alert.present? %>
-			<aside class="alert alert-warning">
-		<%= alert %>
-		</aside>
+	<% end %>
+
+	<% if alert.present? %>
+			<aside class="alert alert-error">
+				<%= alert %>
+			</aside>
 	<% end %>
 </div>
 <div class="container">
