--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,3 @@
 
-<div id="main-container" class="container-fluid"><h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div id="main-container" class="container-fluid"><h1>Welcome to RoRPosWeb</h1>
 </div>
