redirect to show order its ok

--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,4 +1,4 @@
-<%= nested_form_for @order, :html => {:class => "form"}  do |f| %>
+<%= nested_form_for @order, :html => {:class => "well"}  do |f| %>
  <fieldset>
   <% if @order.errors.any? %>
     <div id="error_explanation" class="alert alert-danger">
