--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -29,5 +29,8 @@
   </tbody>
 </table>
 
+<div class="col-xs-12 pagination text-center">
+  <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+</div>
 </div>
 
