--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -61,9 +61,9 @@
             </li>
           <% end %>
           <% else %>
-        <li>
-          <%=link_to 'Sign in' ,new_user_session_path %>
-        </li>
+            <li>
+              <%=link_to 'Sign in' ,new_user_session_path, class: "btn btn-primary'"%>
+            </li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
