--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -8,14 +8,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">POST-WEB</a>
-    </div>
+   </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        
       <% if user_signed_in? %>
+      <ul class="nav navbar-nav navbar-right">
           <li>
                <%= link_to root_path do%>
                 <span class= "glyphicon glyphicon-home">
@@ -59,13 +57,28 @@
                </span>
               <% end %>
             </li>
+      </ul>    
           <% end %>
           <% else %>
+       <ul class="nav navbar-nav">
+        <li>
+          <%=link_to 'What is RoRPosWeb' ,root_path, class: "btn btn-primary'"%>
+        </li>
+        <li>
+          <%=link_to 'Instructions' ,new_user_session_path, class: "btn btn-primary'"%>
+        </li>
+         <li>
+          <%=link_to 'About' ,new_user_session_path, class: "btn btn-primary'"%>
+        </li>
+         
+       </ul>   
+       <ul class="nav navbar-nav navbar-right">
             <li>
               <%=link_to 'Sign in' ,new_user_session_path, class: "btn btn-primary'"%>
             </li>
+        </ul>    
         <% end %>
-      </ul>
+ 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
