--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,62 @@
-
-<div id="main-container" class="container-fluid"><h1>Welcome to RoRPosWeb</h1>
+<div class="jumbotron">
+	    <img src="/images/logo.png" class="pull-right" height="150" width="150" >
+	    <h1>What is RoRPosWeb?</h1>
+	    <p>RoRPos is a System for sales, inventory and administration for to bussiness</p>	
 </div>
+
+<div class="section">
+	<h1 class="text-center">About of software</h1>
+	<div class="col-md-4">
+		<blockquote>
+	  		<p>Created with ruby on rails and angular</p>
+		</blockquote>
+	</div>	
+	<div class="col-md-4">
+		<blockquote>
+	  		<p>Database with postgress</p>
+	 	</blockquote>
+	</div>
+	<div class="col-md-4" >
+		<blockquote>
+	  		<p>CSS with bootstrap</p>
+	 	</blockquote>
+	</div>
+</div>
+
+<div class="section">
+	  <h1 class="text-center">Modules</h1>
+	  <div class="col-sm-6 col-md-3 text-center">
+		 <div class="thumbnail">
+			<span style="font-size: 80px " class="glyphicon glyphicon-barcode text-primary text-center"></span>
+			<div class="caption">
+			   <h3>Sales</h3>
+			</div>
+		  </div>	    
+	  </div>
+	  <div class="text-center col-sm-6 col-md-3">
+	    <div class="thumbnail">
+	      <span style="font-size: 80px " class="glyphicon glyphicon-shopping-cart text-primary"></span>
+	      <div class="caption">
+	        <h3>Orders</h3>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="text-center col-sm-6 col-md-3">
+	    <div class="thumbnail">
+	      <span style="font-size: 80px " class="glyphicon glyphicon-list-alt text-primary"></span>
+	      <div class="caption">
+	        <h3>Products</h3>
+	      </div>
+	    </div>
+	  </div>  	
+	  <div class="text-center col-sm-6 col-md-3">
+	    <div class="thumbnail">
+	      <span style="font-size: 80px " class="glyphicon glyphicon-plane text-primary"></span>
+	      <div class="caption">
+	        <h3>Suppliers</h3>
+	      </div>
+	    </div>
+	  </div>  	
+</div>
+
+	
