--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -30,7 +30,7 @@
 <div class="form-inline">
   <div class="form-group">
     <%= f.label :total %>
-    <%= f.number_field :totalorder, class: 'form-control'%>
+    <%= f.number_field :totalorder, class: 'form-control', step: :any%>
   </div>
   <div class="form-group">
     <%= f.submit class: "btn btn-success"%>
