--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @product, :html => {:class => "panel-footer"}  do |f| %>
+<%= form_for @product, :html => {:class => "well"}  do |f| %>
  <fieldset>
   <% if @product.errors.any? %>
     <div id="error_explanation" class="alert alert-danger">
