--- a/app/views/suppliers/_form.html.erb
+++ b/app/views/suppliers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @supplier, :html => {:class => "panel-footer"}   do |f| %>
+<%= form_for @supplier, :html => {:class => "well"}   do |f| %>
  <fieldset>
     <% if @supplier.errors.any? %>
       <div id="error_explanation" class="alert alert-danger">
