--- a/app/views/suppliers/show.html.erb
+++ b/app/views/suppliers/show.html.erb
@@ -1,6 +1,5 @@
-<p id="notice"><%= notice %></p>
 
-<p>
+<p>i
   <strong>Name:</strong>
   <%= @supplier.name %>
 </p>
@@ -30,5 +29,5 @@
   <%= @supplier.postal_code %>
 </p>
 
-<%= link_to 'Edit', edit_supplier_path(@supplier) %> |
-<%= link_to 'Back', suppliers_path %>
+<%= link_to 'Back', suppliers_path %> |
+<%= link_to 'Add order', new_order_path %>
