--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,39 +1,49 @@
 <div class="jumbotron">
 	    <img src="/images/logo.png" class="pull-right" height="150" width="150" >
 	    <h1>What is RoRPosWeb?</h1>
-	    <p>RoRPos is a System for sales, inventory and administration for to bussiness</p>	
+	    <p>RoRPos is a System for sales and inventory for to mark</p>	
 </div>
 
-<div class="section">
+<div class="section col-md-12">
 	<h1 class="text-center">About of software</h1>
 	<div class="col-md-4">
 		<blockquote>
-	  		<p>Created with ruby on rails and angular</p>
+	  		<p class="lead">Created with ruby on rails and angular</p>
 		</blockquote>
 	</div>	
 	<div class="col-md-4">
 		<blockquote>
-	  		<p>Database with postgress</p>
+	  		<p class="lead">Database with postgress</p>
 	 	</blockquote>
 	</div>
 	<div class="col-md-4" >
 		<blockquote>
-	  		<p>CSS with bootstrap</p>
+	  		<p class="lead">CSS with bootstrap</p>
 	 	</blockquote>
 	</div>
 </div>
 
-<div class="section">
-	  <h1 class="text-center">Modules</h1>
-	  <div class="col-sm-6 col-md-3 text-center">
-		 <div class="thumbnail">
+<div class="section col-md-12">
+ <h1 class="text-center">Modules</h1>
+	<div class="col-md-12">
+	  <div class="text-center col-md-4 ">
+	  	 <div class="thumbnail ">
 			<span style="font-size: 80px " class="glyphicon glyphicon-barcode text-primary text-center"></span>
 			<div class="caption">
 			   <h3>Sales</h3>
 			</div>
-		  </div>	    
+		 </div>	    
 	  </div>
-	  <div class="text-center col-sm-6 col-md-3">
+	  <div class="col-md-6 " >
+		<p class="lead text-justify">Your Sales is easy operation, read barcode and the system increment the quantity of tha sale and validate what the quantity to  purchase </p>
+      </div>
+    </div>  
+</div>    
+    <!-- <div class="col-md-12">
+      <div class="col-md-6 " >
+		<p class="lead text-justify">Your Sales is easy operation, read barcode and the system increment the quntity of tha sale and validate what the quantity to  purchase </p>
+      </div>	
+	  <div class="text-center col-md-4">
 	    <div class="thumbnail">
 	      <span style="font-size: 80px " class="glyphicon glyphicon-shopping-cart text-primary"></span>
 	      <div class="caption">
@@ -41,6 +51,8 @@
 	      </div>
 	    </div>
 	  </div>
+	 </div> 
+
 	  <div class="text-center col-sm-6 col-md-3">
 	    <div class="thumbnail">
 	      <span style="font-size: 80px " class="glyphicon glyphicon-list-alt text-primary"></span>
@@ -56,7 +68,7 @@
 	        <h3>Suppliers</h3>
 	      </div>
 	    </div>
-	  </div>  	
-</div>
+	  </div>   -->	
+<!--</div> -->
 
 	
