--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,44 @@
-<p> Dashboard</p>
+
+
+<div class="section">
+	  <div class="col-sm-6 col-md-3 text-center">
+		<%= link_to tickets_path do %>
+		  <div class="thumbnail"> 
+		  	<span style="font-size: 80px " class="glyphicon glyphicon-barcode text-primary text-center"></span>
+			  <div class="caption">
+				<h3>Sales</h3>			  
+			  </div>
+          </div>	    
+		<% end %>
+	  </div>
+	  <div class="text-center col-sm-6 col-md-3">
+	    <%= link_to orders_path do %>
+		    <div class="thumbnail">
+		      <span style="font-size: 80px " class="glyphicon glyphicon-shopping-cart text-primary"></span>
+		      <div class="caption">
+		        <h3>Orders</h3>
+		      </div>
+		    </div>
+		 <% end %>   
+	  </div>
+	  <div class="text-center col-sm-6 col-md-3">
+	  	<%= link_to products_path do %>
+		    <div class="thumbnail">
+		      <span style="font-size: 80px " class="glyphicon glyphicon-list-alt text-primary"></span>
+		      <div class="caption">
+		        <h3>Products</h3>
+		      </div>
+		    </div>
+		<% end %>   
+	  </div>  	
+	  <div class="text-center col-sm-6 col-md-3">
+	  	<%= link_to suppliers_path do %>
+		    <div class="thumbnail">
+		      <span style="font-size: 80px " class="glyphicon glyphicon-plane text-primary"></span>
+		      <div class="caption">
+		        <h3>Suppliers</h3>
+		      </div>
+		    </div>
+		  </div>  	
+	    <% end %>  
+</div>
