--- a/app/views/orders/_order_items_fields.html.erb
+++ b/app/views/orders/_order_items_fields.html.erb
@@ -1,7 +1,7 @@
   
   <div class="form-group">
       <%= f.label :product %>
-      <%= f.collection_select(:product_id, Product.all, :id, :name_with_initial,  {prompt: true}, {:class=>'form-control'})%>  
+      <%= f.collection_select(:product_id, Product.all, :id, :name_with_initial,  {prompt: true}, {:class=>'selectproduct form-control'})%>  
     </div>
      
   <div class="form-inline">
