--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,7 +8,9 @@
       <th>supplier</th>
       <th>total</th>
       <th>products</th>
-      <th colspan="3"></th>
+      <th>quantity</th>
+      <th>purchas price</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -17,10 +19,17 @@
       <tr>
         <td><%= order.supplier.name %></td>
         <td><%= order.totalorder %></td>
-        <td><% order.OrderItems.each do |oi| %>
+        <% order.OrderItems.each do |oi| %>
+         <td>
           <%= oi.product.name %><p>
-          <% end %>
-        </td>
+         </td>
+         <td>
+           <%= oi.quantity %><p>
+         </td>
+         <td>
+          <%= oi.purchaseprice %><p> 
+         </td>
+        <% end %>
           <td><%= link_to 'Show', order %></td>
           <td><%= link_to 'Edit', edit_order_path(order) %></td> 
           <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
