--- a/app/views/roles/_form.html.erb
+++ b/app/views/roles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @role, :html => {:class => "panel-footer"} do |f| %>
+<%= form_for @role, :html => {:class => "well"} do |f| %>
 <% if @role.errors.any? %>
     <div id="error_explanation"  class="alert alert-danger">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -10,36 +10,9 @@
     </div>
   <% end %>
    <div class="form-group">
-    <%= f.label :alias %><br>
-    <%= f.text_field :alias, autofocus: true, class: 'form-control' %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name, autofocus: true, class: 'form-control' %>
   </div>
-  <div class="form-group">
-    <%= f.label :username %><br>
-    <%= f.text_field :username, class: 'form-control' %>
-  </div>
-
-   <div class="form-group">
-    <%= f.label :email %><br>
-    <%= f.text_field :email, class: 'form-control' %>
-  </div>
-  
-  <div class="field">
-  <%= f.label :role %>
-   <% Role.all.each do |role| %>
-    <%= check_box_tag "user[role_ids][]", role.id, @user.role_ids.include?(role.id) %>
-    <%= role.name %>
-  <% end %>
-  </div>
- <div class="form-group">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control' %>
-  </div>
-
   <div class="actions">
     <%= f.submit class: "btn btn-success" %>
   </div>
