--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -35,6 +35,7 @@
               <li><%= link_to 'Orders', orders_path%></li>
               <li><%= link_to 'Suppliers', suppliers_path%></li>
               <li><%= link_to 'Products',products_path %></li>
+              <li><%= link_to 'Tickets', tickets_path %></li>
             </ul>
           </li>
          </li>
@@ -51,33 +52,37 @@
             </ul>
           </li>
           <% if current_user.has_role? :admin %>
-            <li>
-              <%= link_to users_path  do%>
+            <li class="dropdown">
+            <a class="dropdown-toggle" data-toggle="dropdown" href="#">
               <span class="glyphicon glyphicon-cog">
-               </span>
-              <% end %>
-            </li>
-      </ul>    
+             </span>
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li><%= link_to 'User', users_path %></li>
+              <li><%= link_to 'Roles', roles_path %></li>
+            </ul>
+          </li>    
           <% end %>
           <% else %>
-       <ul class="nav navbar-nav">
-        <li>
-          <%=link_to 'What is RoRPosWeb' ,root_path, class: "btn btn-primary'"%>
-        </li>
-        <li>
-          <%=link_to 'Instructions' ,new_user_session_path, class: "btn btn-primary'"%>
-        </li>
-         <li>
-          <%=link_to 'About' ,new_user_session_path, class: "btn btn-primary'"%>
-        </li>
-         
-       </ul>   
-       <ul class="nav navbar-nav navbar-right">
+           <ul class="nav navbar-nav">
             <li>
-              <%=link_to 'Sign in' ,new_user_session_path, class: "btn btn-primary'"%>
+              <%=link_to 'What is RoRPosWeb' ,root_path, class: "btn btn-primary'"%>
             </li>
-        </ul>    
-        <% end %>
+            <li>
+              <%=link_to 'Instructions' ,new_user_session_path, class: "btn btn-primary'"%>
+            </li>
+             <li>
+              <%=link_to 'Contact' ,new_user_session_path, class: "btn btn-primary'"%>
+            </li>
+             
+           </ul>   
+           <ul class="nav navbar-nav navbar-right">
+                <li>
+                  <%=link_to 'Sign in' ,new_user_session_path, class: "btn btn-primary'"%>
+                </li>
+            </ul>    
+          <% end %>
  
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
