--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,14 +1,17 @@
 
 <h1>Listing Tickets</h1>
 
-<table class="table">
+<table class="table table-hover table-condensed">
   <thead>
     <tr>
       <th>Id</th>
       <th>Total</th>
       <th>Pay_with</th>
       <th>change</th>
+      <th>Total Products</th>
+      <th>Products</th>
       <th>Status</th>
+      <th>Date of Shoping</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,7 +23,13 @@
         <td><%= ticket.total %></td>
         <td><%= ticket.pay_with %></td>
         <td><%= ticket.change %></td>
+        <td><%= ticket.LineItems.count %></td>
+        <td><% ticket.LineItems.each do |sale| %>
+         <p><%= sale.product.name%></p>
+        <% end %>
+        </td>
         <td><%= ticket.status %></td>
+        <td><%= ticket.updated_at %></td>
         <td><%= link_to 'Edit', edit_ticket_path(ticket) %></td>
         <td><%= link_to 'show', ticket %></td>
         <td><%= link_to 'Destroy', ticket, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -28,6 +37,8 @@
     <% end %>
   </tbody>
 </table>
-
+<div class="col-xs-12 pagination text-center">
+  <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+</div>
 <br>
 
