--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,6 +11,7 @@
       <th>Alias</th>
       <th>Username</th>
       <th>Email</th>
+      <th>Role</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -21,6 +22,11 @@
         <td><%= user.alias %></td>
         <td><%= user.username %></td>
         <td><%= user.email%></td>
+        <td><% user.roles.each do |r|%>
+            <%= r.name %>
+          <%end%>
+        </td>
+
         <% if current_user.has_role? :admin %>
           <td><%= link_to 'Show', user %></td>
           <td><%= link_to 'Edit', edit_user_path(user) %></td> 
