--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -38,7 +38,7 @@
   </tbody>
 </table>
 <div class="col-xs-12 pagination text-center">
-  <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+  <%= will_paginate @tickets, renderer: BootstrapPagination::Rails %>
 </div>
 <br>
 
